ActionDataRequestBatchEventConsumer updated to new flow